[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Home.png" type="Texture" id=1]
[ext_resource path="res://assets/Captured.png" type="Texture" id=2]
[ext_resource path="res://assets/HomeHover.png" type="Texture" id=3]
[ext_resource path="res://assets/TryAgainHover.png" type="Texture" id=4]
[ext_resource path="res://assets/TryAgain.png" type="Texture" id=5]
[ext_resource path="res://LevelFailed.gd" type="Script" id=6]

[node name="LevelFailed" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 184.0
color = Color( 1, 1, 1, 0.498039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 1245.0
margin_bottom = 464.0
rect_scale = Vector2( 0.25, 0.25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1240.0
margin_bottom = 459.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 1240.0
margin_bottom = 459.0
texture = ExtResource( 2 )

[node name="MarginContainer2" type="MarginContainer" parent="."]
margin_left = 100.0
margin_top = 140.0
margin_right = 1340.0
margin_bottom = 377.0
rect_scale = Vector2( 0.1, 0.1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
margin_right = 1240.0
margin_bottom = 237.0

[node name="TextureButton" type="TextureButton" parent="MarginContainer2/VBoxContainer"]
margin_right = 1240.0
margin_bottom = 237.0
texture_normal = ExtResource( 5 )
texture_focused = ExtResource( 4 )

[node name="MarginContainer3" type="MarginContainer" parent="."]
margin_left = -30.0
margin_top = 158.0
margin_right = 1210.0
margin_bottom = 395.0
rect_scale = Vector2( 0.1, 0.1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer3"]
margin_right = 1240.0
margin_bottom = 237.0

[node name="TextureButton2" type="TextureButton" parent="MarginContainer3/VBoxContainer"]
margin_right = 1240.0
margin_bottom = 237.0
texture_normal = ExtResource( 1 )
texture_focused = ExtResource( 3 )
[connection signal="pressed" from="MarginContainer2/VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="MarginContainer3/VBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
